--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ backoff = ">=2.2.1,<3.0.0"
 ollama = ">=0.2.0,<1.0.0"
 faiss-cpu = ">=1.7.0,<2.0.0"
 sentence-transformers = ">=2.0.0,<3.0.0"
+pynput = "^1.8.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
